# memory-monitoring

./: README.md  pyproject.toml  run.sh
src/python_memwatch/: __init__.py  server.py
src/python_memwatch/templates/: index.html
