[build-system]
requires = ["setuptools>=66.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-memwatch"
version = "0.1.0"
description = "Визуализация памяти Python (Arenas/Pools/Blocks)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Your Name"}]

# Зависимости, которые установятся автоматически
dependencies = [
    "flask>=2.0.0",
    "psutil>=5.9.0"
]

# Создает консольную команду 'python-memwatch'
[project.scripts]
python-memwatch = "python_memwatch.server:main"

# Настройка поиска пакетов в папке src
[tool.setuptools.packages.find]
where = ["src"]
include = ["python_memwatch*"]

# ОБЯЗАТЕЛЬНО: Включаем html файлы в пакет
[tool.setuptools.package-data]
"python_memwatch" = ["templates/*.html"]
